[package]
name = "ase-swatch"
version = "0.1.0"
authors = ["Akash Hamirwasia"]
edition = "2018"
description = "Create Adobe Swatch Exchange (ASE) Files for colors and palette"
license = "MIT"
readme = "README.md"
repository = "https://github.com/blenderskool/ase-swatch"
homepage = "https://github.com/blenderskool/ase-swatch"
documentation = "https://docs.rs/ase-swatch"
keywords = ["ase", "create", "swatch", "palette"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
structure = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"
